--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,16 @@
   position: relative;
 }
 
-.cdx-warning [contentEditable=true][data-placeholder]:empty::before{
+.cdx-warning [contentEditable=true][data-placeholder]::before{
+  position: absolute;
   content: attr(data-placeholder);
   color: #707684;
   font-weight: normal;
+  opacity: 0;
+}
+
+.cdx-warning [contentEditable=true][data-placeholder]:empty::before {
+  opacity: 1;
 }
 
 .cdx-warning [contentEditable=true][data-placeholder]:empty:focus::before {
