--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-.cdx-warning {
+.cdx-success {
   position: relative;
 }
 
-.cdx-warning [contentEditable=true][data-placeholder]::before{
+.cdx-success [contentEditable=true][data-placeholder]::before{
   position: absolute;
   content: attr(data-placeholder);
   color: #707684;
@@ -10,16 +10,16 @@
   opacity: 0;
 }
 
-.cdx-warning [contentEditable=true][data-placeholder]:empty::before {
+.cdx-success [contentEditable=true][data-placeholder]:empty::before {
   opacity: 1;
 }
 
-.cdx-warning [contentEditable=true][data-placeholder]:empty:focus::before {
+.cdx-success [contentEditable=true][data-placeholder]:empty:focus::before {
   opacity: 0;
 }
 
 
-.cdx-warning::before {
+.cdx-success::before {
   content: '';
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='16' height='16' viewBox='0 0 10 10'%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Crect width='10' height='10' transform='translate(919 911)' fill='none'/%3E%3C/clipPath%3E%3C/defs%3E%3Cg transform='translate(-919 -911)' clip-path='url(%23a)'%3E%3Cg transform='translate(928.426 920.427)'%3E%3Ccircle cx='4.243' cy='4.243' r='4.243' transform='translate(-10.426 -4.427) rotate(-45)' fill='none' stroke='%23707684' stroke-miterlimit='10' stroke-width='1.2'/%3E%3Cpath d='M21,25.989,22.27,27.26,24.534,25' transform='translate(-26.98 -30.413)' fill='none' stroke='%23707684' stroke-miterlimit='10' stroke-width='1.2'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   width: 18px;
@@ -31,15 +31,15 @@
 }
 
 @media all and (max-width: 735px) {
-  .cdx-warning::before {
+  .cdx-success::before {
     display: none;
   }
 }
 
-.cdx-warning__message {
+.cdx-success__message {
   min-height: 85px;
 }
 
-.cdx-warning__title {
+.cdx-success__title {
   margin-bottom: 6px;
 }
