--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 .cdx-warning {
   position: relative;
-
 }
 
 @media all and (min-width: 736px) {
@@ -9,7 +8,7 @@
   }
 }
 
-.cdx-warning [contentEditable=true][data-placeholder]::before{
+.cdx-warning [contentEditable="true"][data-placeholder]::before {
   position: absolute;
   content: attr(data-placeholder);
   color: #707684;
@@ -17,18 +16,17 @@
   opacity: 0;
 }
 
-.cdx-warning [contentEditable=true][data-placeholder]:empty::before {
+.cdx-warning [contentEditable="true"][data-placeholder]:empty::before {
   opacity: 1;
 }
 
-.cdx-warning [contentEditable=true][data-placeholder]:empty:focus::before {
+.cdx-warning [contentEditable="true"][data-placeholder]:empty:focus::before {
   opacity: 0;
 }
 
-
 .cdx-warning::before {
-  content: '';
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='5' y='5' width='14' height='14' rx='4' stroke='black' stroke-width='2'/%3E%3Cline x1='12' y1='9' x2='12' y2='12' stroke='black' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M12 15.02V15.01' stroke='black' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E");
+  content: "";
+  /* background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='5' y='5' width='14' height='14' rx='4' stroke='black' stroke-width='2'/%3E%3Cline x1='12' y1='9' x2='12' y2='12' stroke='black' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M12 15.02V15.01' stroke='black' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E"); */
   width: 24px;
   height: 24px;
   background-size: 24px 24px;
